--- a/WebClient/index.html
+++ b/WebClient/index.html
@@ -30,9 +30,7 @@
 		<button id="enter">Вход</button>
 		<button id="reg">Регистрация</button>
 	</div>
-	<p id="output">
-
-	</p>
+	<p id="output"></p>
+	<button id="secret">Засекреть¿?</button>
 </body>
-
 </html>
