Make testarea giant grey frame

--- a/WebClient/index.html
+++ b/WebClient/index.html
@@ -30,7 +30,7 @@
 		<button id="enter">Вход</button>
 		<button id="reg">Регистрация</button>
 	</div>
-	<p id="output"></p>
+	<textarea id="IO"></textarea>
 	<button id="secret">Засекреть¿?</button>
 </body>
 </html>
